add comentários hero e formulario css

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@ body {
     font-family: Verdana, Tahoma, sans-serif;
 }
 
+/* SEÇÃO HERO*/
+
 /* SEÇÃO REASONS TO USE */
 
 .reasons-to-use {
@@ -165,3 +167,5 @@ body {
     margin-top: 0; 
   }
 }
+
+/* SEÇÃO CONTATO E FOOTER */
