--- a/css/form.css
+++ b/css/form.css
@@ -6,39 +6,36 @@
 
 .form_section{     
     width: 100%;
+    height: 100%;
     background: #c54b3c;
     text-align: center;    
 }
 
 .form_header{
-    padding-top: 30px;
+    padding-top: 25px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 30px;
     color: white;
 }
 .form_box{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     display: flex;
     flex-wrap: wrap;
-    margin: 30px 05% auto;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 40px 05% auto;
+    align-content: space-between;    
     width: 90%;
-    max-width: 692px;   
+    height: 430px;    
  }
 
 .form_label{
     color:white;
     font-size: 15px;
-    margin-bottom: 10px;
-    
-     
+    margin-bottom: -20px; 
 }
 .form_text{
     width: 100%;
-
 }
 
 input{
-	margin-bottom: 25px;
     height: 40px;
     border:none;
     border-radius: 2px;
@@ -55,30 +52,20 @@ textarea{
     background: #b04638;
     border: none;
     border-radius: 2px;
-    width: 75px;
-    height: 35px;
+    width: 80px;
+    height: 40px;
     font-size:18px;
     color: #eae4e4;
-    margin-top: 20px;
 }
 
 .form_footer{
-    margin-top: 10px;
+    margin-top: 20px;
     width: 100%;
-    height: 30px;
+    height: 10%;
     background: #eae4e4;
     color: #b04638;
 }
 
 @media screen and (min-width:768px) and (max-width:992px){
-    .form_header{
-    padding-top: 40px;
-    font-size: 40px;
-    color: white;
-    }
 
-    .form_box{
-        width: 90%;
-        max-width: 700px;   
-    }
 }
